# ripflow

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  release.yml  tests.yml
api/middle-layer-analyzer/: index.html
api/sink-connectors/: index.html
api/source-connectors/: index.html
basic-usage/: index.html
docs/: basic-usage.md  getting-started.md  index.md
docs/api/: middle-layer-analyzer.md  sink-connectors.md  source-connectors.md
docs/examples/: test_pydoocs_server.py
examples/: test_pydoocs_server.py
getting-started/: index.html
middle_layer_analyzer/: core.py
middle_layer_analyzer/connectors/sink/: __init__.py  base.py  zmq_sink_connector.py
middle_layer_analyzer/connectors/source/: pydoocs_source_connector.py
middle_layer_analyzer/serializers/: avro_serializer.py  base.py
middle_layer_server/: core.py
middle_layer_server/analyzers/: base.py
middle_layer_server/connectors/sink/: base.py  zmq_sink_connector.py
middle_layer_server/connectors/source/: __init__.py  base.py  pydoocs_source_connector.py
middle_layer_server/serializers/: base.py
ripflow/: __init__.py  core.py  supervisor.py  utils.py
ripflow/analyzers/: base.py
ripflow/connectors/sink/: base.py  zmq_sink_connector.py
ripflow/connectors/source/: base.py  pydoocs_source_connector.py
ripflow/core/: __init__.py  processes.py  ripflow.py  supervisor.py  utils.py
ripflow/serializers/: __init__.py  base.py  json_serializer.py
search/: search_index.json
tests/: test_pipeline.py  test_pydoocs_server.py  test_pydoocs_source.py  test_serializers.py  test_source_connectors.py  test_worker_crash.py
