[tool.poetry]
name = "middle-layer-analyzer"
version = "0.1.3"
description = "Python package to insert analysis pipelines into data streams"
authors = ["Soeren Jalas <soeren.jalas@desy.de>"]
repository = "https://gitlab.desy.de/mls/kaldera-electrons/python-doocs-middlelayer"
readme = "README.md"
packages = [{include = "middle_layer_analyzer"}]


[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pyzmq = "^25.0.0"
avro = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
mypy = "^1.0.1"
pre-commit = "^3.0.4"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.0.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
